--- a/spark/common/pom.xml
+++ b/spark/common/pom.xml
@@ -235,5 +235,15 @@
                 <artifactId>scalastyle-maven-plugin</artifactId>
             </plugin>
         </plugins>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+            </resource>
+        </resources>
+        <testResources>
+            <testResource>
+                <directory>src/test/resources</directory>
+            </testResource>
+        </testResources>
 	</build>
 </project>
